feat(portfolio): unify project media display and implement Berify page
- Refactor `MusicPlayerEvidence` and `EvidenceGallery` to use tabbed layouts.
- Enhance `ProjectImageItem` with status labels (Before/After) and unified styles.
- Complete implementation of Berify project detail page with interactive sections.
- Centralize common localization keys in [projects/_common.json] for reuse.

--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -3,6 +3,6 @@
   "storeLink": "Store",
   "projectDemo": "Project Demo",
   "keyContributions": "Key Contributions",
-  "gallery": "Gallery"
+  "projectShowcase": "Project Showcase"
 }
 
