refactor(berify): 重構 IDV 技術亮點內容並優化組件 i18n 支援
- 重構 `idv` 技術亮點，新增「解決的問題」、「核心功能」、「架構設計」與「核心程式碼」區塊
- 更新 `zh` 與 `en` 語系檔案以符合新的架構描述
- 為 `TechnicalSpotlight` 組件加入 `next-intl` 支援，並實作程式碼片段標題的語系化
- 修復 `Collapsible` 組件，加入 `"use client"` 指令並微調 `backdrop-blur` 樣式

--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -3,6 +3,7 @@
   "storeLink": "Store",
   "projectDemo": "Project Demo",
   "keyContributions": "Key Contributions",
-  "projectShowcase": "Project Showcase"
+  "projectShowcase": "Project Showcase",
+  "codeSnippet": "Core Code"
 }
 
