--- a/public/locales/zh/projects/berify.json
+++ b/public/locales/zh/projects/berify.json
@@ -52,26 +52,51 @@
         "summary": "生物辨識安全與邀請者仲裁機制",
         "blocks": [
           {
-            "type": "workflow",
-            "title": "驗證流程",
-            "steps": [
-              {
-                "step": "1",
-                "title": "Face Login 編排",
-                "desc": "Client 端整合 Incode SDK + Backend OCR + Verify API"
-              },
-              { "step": "2", "title": "四向一致性檢核", "desc": "後端比對 OCR Name / App User / Web User" },
-              { "step": "3", "title": "邀請者仲裁", "desc": "姓名不符時，系統發信通知邀請者" },
-              { "step": "4", "title": "資料修正", "desc": "邀請者點擊安全連結，自動更正員工資料" }
-            ]
+            "type": "list",
+            "title": "目標",
+            "items": ["避免非廠商授權人員透過行動端應用程式（App）竄改標籤資訊或存取高敏感資產。"]
           },
           {
             "type": "grid",
-            "title": "風險控管",
+            "title": "核心功能",
             "items": [
-              { "icon": "🎭", "title": "身分詐欺", "desc": "防止離職或未授權員工冒用帳號操作高敏感資產" },
-              { "icon": "📝", "title": "資料漂移", "desc": "確保 DB 記錄與法定證件保持同步" },
-              { "icon": "🔒", "title": "自我核准", "desc": "員工無法自行竄改個人資料，需邀請者仲裁" }
+              { "icon": "🎭", "title": "防止身分詐欺", "desc": "防止離職或未授權員工冒用帳號操作系統。" },
+              {
+                "icon": "📝",
+                "title": "身分資料一致性",
+                "desc": "確保資料庫（DB）紀錄與政府發放的法定證件資料完全同步。"
+              },
+              {
+                "icon": "🔒",
+                "title": "管理員（邀請者）審核",
+                "desc": "實作「管理員仲裁」機制，員工無權自行修改關鍵身分資料。"
+              }
+            ]
+          },
+          {
+            "type": "workflow",
+            "title": "架構設計",
+            "steps": [
+              {
+                "step": "1",
+                "title": "生物辨識與資料對接",
+                "desc": "整合 Incode SDK 執行人臉辨識，並取得 OCR 資料，接著執行後端驗證邏輯。"
+              },
+              {
+                "step": "2",
+                "title": "多維度一致性校驗",
+                "desc": "實作後端「四向比對」演算法，自動比對 OCR 原始數據、App 用戶資訊與 Web 端權限紀錄。"
+              },
+              {
+                "step": "3",
+                "title": "異步衝突仲裁系統",
+                "desc": "當驗證失敗時，系統透過 SMTP/Email Service 發送信件通知邀請者。"
+              },
+              {
+                "step": "4",
+                "title": "自動化資料修復事務",
+                "desc": "使用具有時效性的安全連結，邀請者可一鍵核可並更新身分狀態。"
+              }
             ]
           }
         ],
@@ -331,4 +356,3 @@
     "disclaimer": "本頁面展示的內容為商業專案，相關截圖僅供作品集展示用途。"
   }
 }
-
