--- a/public/locales/zh/projects/_common.json
+++ b/public/locales/zh/projects/_common.json
@@ -3,6 +3,7 @@
   "storeLink": "商店",
   "projectDemo": "專案展示",
   "keyContributions": "核心貢獻",
-  "projectShowcase": "專案展示"
+  "projectShowcase": "專案展示",
+  "codeSnippet": "核心程式碼"
 }
 
